--- a/Main page.css
+++ b/Main page.css
@@ -31,11 +31,11 @@ body {
 
 /* 卡片容器样式 */
 .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-    padding: 30px;
+    display: flex; /* 使用弹性布局 */
+    flex-wrap: wrap; /* 允许卡片换行 */
+    justify-content: center; /* 水平居中 */
+    gap: 30px; /* 卡片之间的间距 */
+    padding: 30px; 
 }
 
 /* 卡片样式 */
@@ -106,4 +106,14 @@ h2 {
         width: 100%; /* 图表容器宽度设为100% */
         height: 300px; /* 手机屏幕上减小图表高度 */
     }
+}
+
+.ol-xywh {
+    text-align: center;
+    font-size: 16px;
+}
+
+.whln {
+    text-align: center;
+    font-size: 20px;
 }
