--- a/Main page.css
+++ b/Main page.css
@@ -117,3 +117,20 @@ h2 {
     text-align: center;
     font-size: 20px;
 }
+
+#toggle-more-images {
+   background-color: rgb(73, 96, 221); 
+   /* 新增：让查看更多图片按钮变圆 */
+    border-radius: 50%; 
+    /* 可以根据需要调整按钮的宽度和高度，保证按钮是正方形 */
+    width: 40px;
+    height: 40px; 
+    /* 隐藏多余的文本 */
+    font-size: 12px;
+    overflow: hidden;
+    /* 文本居中 */
+    text-align: center;
+    color: white;
+    border: 1px solid #ccc;
+
+}
