--- a/Main page.css
+++ b/Main page.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.class-header {
+.class-header { /* 头部样式 */
     top: 0;
     left: 0;
     position: relative;
@@ -80,6 +80,7 @@ body {
 
 h3 {
     text-align: center;
+    margin-top: 10xp;
 }
 
 h2 {
@@ -133,4 +134,83 @@ h2 {
     color: white;
     border: 1px solid #ccc;
 
+}
+
+
+.like-button {
+    border-radius: 10px;
+    background-color: transparent; /* 背景透明 */
+}
+
+ /* 滑动开关样式 */
+ .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+.form_switch {
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    height: 400px;
+    width: 500px;
+    margin-left: auto; /* 左侧间距为自动 */
+    margin-right: auto; /* 右侧间距为自动 */
 }
